native/analysis/analysis_ffi_abi.h

struct NakiAnalysisSummary {
    int32_t loaded;
    int32_t frame_count;
    int32_t packet_count;
    int32_t nalu_count;
    int32_t video_width;
    int32_t video_height;
    int32_t time_base_num;
    int32_t time_base_den;
    int32_t current_frame_idx;
    int32_t codec;
    int32_t _reserved[6];
};
struct NakiFrameInfo {
    int32_t poc;
    int32_t temporal_id;
    int32_t slice_type;
    int32_t nal_type;
    int32_t avg_qp;
    int32_t num_ref_l0;
    int32_t num_ref_l1;
    int32_t ref_pocs_l0[15];
    int32_t ref_pocs_l1[15];
    int64_t pts;
    int64_t dts;
    int32_t packet_size;
    int32_t keyframe;
    int32_t _reserved[2];
};
struct NakiNaluInfo {
    uint64_t offset;
    uint32_t size;
    uint8_t nal_type;
    uint8_t temporal_id;
    uint8_t layer_id;
    uint8_t flags;
};
struct NakiFrameBucket {
    int32_t start_frame;
    int32_t frame_count;
    int32_t packet_size_min;
    int32_t packet_size_max;
    int64_t packet_size_sum;
    int32_t qp_min;
    int32_t qp_max;
    int64_t qp_sum;
    int32_t keyframe_count;
    int32_t _reserved[3];
};
struct NakiOverlayState {
    int32_t show_cu_grid;
    int32_t show_pred_mode;
    int32_t show_qp_heatmap;
    int32_t show_pred_lines;
    int32_t show_cu_bit_cost_heatmap;
    int32_t opacity_permille;
    int32_t mode;
    int32_t track_file_id;
    int32_t _reserved;
};
struct NakiAnalysisGenerationJobResult {
    uint64_t job_id;
    int32_t kind;
    int32_t ok;
    int32_t status;
    int32_t start_frame;
    int32_t end_frame;
    int32_t priority;
    int32_t _reserved;
    char hash[65];
    char message[256];
};
struct NakiAnalysisGenerationServiceStats {
    int32_t worker_count;
    int32_t active_workers;
    int32_t pending_jobs;
    int32_t running_jobs;
    int32_t completed_jobs;
    int32_t failed_jobs;
    int32_t deduped_jobs;
    int32_t backpressure_drop_count;
    uint64_t submitted_jobs;
};
struct NakiQualityDistribution {
    uint64_t count;
    double mean;
    double p95;
    double maximum;
};
struct NakiQualitySummary {
    uint32_t schema_version;
    int32_t video_width;
    int32_t video_height;
    int32_t bit_depth;
    int64_t sample_interval_us;
    uint32_t max_samples;
    int32_t truncated;
    uint64_t unsupported_pixel_frames;
    uint64_t sample_count;
    NakiQualityDistribution blockiness;
    NakiQualityDistribution banding;
    NakiQualityDistribution blur;
    NakiQualityDistribution noise;
    NakiQualityDistribution flicker;
};
struct NakiQualitySample {
    uint64_t sample_index;
    uint64_t decoded_frame_index;
    int64_t pts_us;
    double blockiness;
    double banding;
    double blur;
    double noise;
    double flicker;
    double average_qp;
};
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_sizeof_quality_summary();
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_sizeof_quality_sample();
extern "C" NAKI_ANALYSIS_FFI_EXPORT void naki_analysis_set_overlay(const NakiOverlayState* state);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_set_overlay_track(int32_t track_file_id, const char* analysis_path);
extern "C" NAKI_ANALYSIS_FFI_EXPORT void naki_analysis_clear_overlay_tracks();
extern "C" NAKI_ANALYSIS_FFI_EXPORT NakiAnalysisHandle naki_analysis_open(const char* analysis_path);
extern "C" NAKI_ANALYSIS_FFI_EXPORT void naki_analysis_close(NakiAnalysisHandle handle);
extern "C" NAKI_ANALYSIS_FFI_EXPORT const NakiAnalysisSummary* naki_analysis_handle_get_summary(NakiAnalysisHandle handle);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_frame_index_for_timestamp(NakiAnalysisHandle handle, int64_t pts_us, int64_t dts_us);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_frame_index_for_source_packet(NakiAnalysisHandle handle, int64_t packet_pos, int32_t packet_size, int32_t packet_index, int64_t packet_pts, int64_t packet_dts);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_get_frames_range(NakiAnalysisHandle handle, int32_t start, NakiFrameInfo* out, int32_t max_count);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_get_nalus_range(NakiAnalysisHandle handle, int32_t start, NakiNaluInfo* out, int32_t max_count);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_frame_to_nalu(NakiAnalysisHandle handle, int32_t frame_index);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_nalu_to_frame(NakiAnalysisHandle handle, int32_t nalu_index);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_handle_get_frame_buckets(NakiAnalysisHandle handle, int32_t start, int32_t bucket_size, NakiFrameBucket* out, int32_t max_count);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_generate_vac2_base(const char* video_path, const char* hash, const char* cache_root, int64_t max_cache_bytes);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_generate_vac2_overlay_chunk(const char* video_path, const char* hash, const char* cache_root, int32_t start_frame, int32_t end_frame, int64_t max_cache_bytes);
extern "C" NAKI_ANALYSIS_FFI_EXPORT uint64_t naki_analysis_submit_vac2_overlay_chunk(const char* video_path, const char* hash, const char* cache_root, int32_t start_frame, int32_t end_frame, int64_t max_cache_bytes, int32_t priority);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_poll_generation_jobs(NakiAnalysisGenerationJobResult* out, int32_t max_count);
extern "C" NAKI_ANALYSIS_FFI_EXPORT void naki_analysis_get_generation_service_stats(NakiAnalysisGenerationServiceStats* out);
extern "C" NAKI_ANALYSIS_FFI_EXPORT NakiQualityHandle naki_analysis_quality_analyze(
    const char* video_path,
    int64_t sample_interval_us,
    uint32_t max_samples);
extern "C" NAKI_ANALYSIS_FFI_EXPORT void naki_analysis_quality_close(
    NakiQualityHandle handle);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_quality_get_summary(
    NakiQualityHandle handle,
    NakiQualitySummary* out);
extern "C" NAKI_ANALYSIS_FFI_EXPORT int32_t naki_analysis_quality_get_samples(
    NakiQualityHandle handle,
    int32_t start,
    NakiQualitySample* out,
    int32_t max_count);