lib/analysis/analysis_ffi.dart


    setOverlay = library.lookupFunction<_SetOverlayNative, _SetOverlayDart>(
      'naki_analysis_set_overlay',
    );
    setOverlayTrack = library
        .lookupFunction<_SetOverlayTrackNative, _SetOverlayTrackDart>(
          'naki_analysis_set_overlay_track',
        );
    clearOverlayTracks = library
        .lookupFunction<_ClearOverlayTracksNative, _ClearOverlayTracksDart>(
          'naki_analysis_clear_overlay_tracks',
        );
    generateVac2Base = library
        .lookupFunction<_GenerateVac2BaseNative, _GenerateVac2BaseDart>(
          'naki_analysis_generate_vac2_base',
        );
    generateVac2OverlayChunk = library
        .lookupFunction<
          _GenerateVac2OverlayChunkNative,
          _GenerateVac2OverlayChunkDart
        >('naki_analysis_generate_vac2_overlay_chunk');
    try {
      submitVac2OverlayChunk = library
          .lookupFunction<
            _SubmitVac2OverlayChunkNative,
            _SubmitVac2OverlayChunkDart
          >('naki_analysis_submit_vac2_overlay_chunk');
      pollGenerationJobs = library
          .lookupFunction<_PollGenerationJobsNative, _PollGenerationJobsDart>(
            'naki_analysis_poll_generation_jobs',
          );
      getGenerationServiceStats = library
          .lookupFunction<
            _GetGenerationServiceStatsNative,
            _GetGenerationServiceStatsDart
          >('naki_analysis_get_generation_service_stats');
    } catch (_) {
      submitVac2OverlayChunk = null;
      pollGenerationJobs = null;
      getGenerationServiceStats = null;
    }
    open = library.lookupFunction<_OpenNative, _OpenDart>('naki_analysis_open');
    close = library.lookupFunction<_CloseNative, _CloseDart>(
      'naki_analysis_close',
    );
    handleGetSummary = library
        .lookupFunction<_HandleGetSummaryNative, _HandleGetSummaryDart>(
          'naki_analysis_handle_get_summary',
        );
    handleFrameIndexForTimestamp = library
        .lookupFunction<
          _HandleFrameIndexForTimestampNative,
          _HandleFrameIndexForTimestampDart
        >('naki_analysis_handle_frame_index_for_timestamp');
    handleFrameIndexForSourcePacket = library
        .lookupFunction<
          _HandleFrameIndexForSourcePacketNative,
          _HandleFrameIndexForSourcePacketDart
        >('naki_analysis_handle_frame_index_for_source_packet');
    handleGetFramesRange = library
        .lookupFunction<_HandleGetFramesRangeNative, _HandleGetFramesRangeDart>(
          'naki_analysis_handle_get_frames_range',
        );
    handleGetNalusRange = library
        .lookupFunction<_HandleGetNalusRangeNative, _HandleGetNalusRangeDart>(
          'naki_analysis_handle_get_nalus_range',
        );
    handleFrameToNalu = library
        .lookupFunction<_HandleIndexMapNative, _HandleIndexMapDart>(
          'naki_analysis_handle_frame_to_nalu',
        );
    handleNaluToFrame = library
        .lookupFunction<_HandleIndexMapNative, _HandleIndexMapDart>(
          'naki_analysis_handle_nalu_to_frame',
        );
    handleGetFrameBuckets = library
        .lookupFunction<
          _HandleGetFrameBucketsNative,
          _HandleGetFrameBucketsDart
        >('naki_analysis_handle_get_frame_buckets');
    try {
      sizeofQualitySummary = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
        'naki_analysis_sizeof_quality_summary',
      );
      sizeofQualitySample = library.lookupFunction<_AbiIntNative, _AbiIntDart>(
        'naki_analysis_sizeof_quality_sample',
      );
      qualityAnalyze = library
          .lookupFunction<_QualityAnalyzeNative, _QualityAnalyzeDart>(
            'naki_analysis_quality_analyze',
          );
      qualityClose = library
          .lookupFunction<_QualityCloseNative, _QualityCloseDart>(
            'naki_analysis_quality_close',
          );
      qualityGetSummary = library
          .lookupFunction<_QualityGetSummaryNative, _QualityGetSummaryDart>(
            'naki_analysis_quality_get_summary',
          );
      qualityGetSamples = library
          .lookupFunction<_QualityGetSamplesNative, _QualityGetSamplesDart>(
            'naki_analysis_quality_get_samples',
          );
    } catch (_) {
      sizeofQualitySummary = null;
      sizeofQualitySample = null;
      qualityAnalyze = null;
      qualityClose = null;
      qualityGetSummary = null;
      qualityGetSamples = null;
    }

    _validateAbi();
  }

  static _AnalysisNativeBindings? _instance;
  static AnalysisFfiUnavailable? _unavailable;

  static _AnalysisNativeBindings get instance {
    final existing = _instance;
    if (existing != null) return existing;
    final previousFailure = _unavailable;
    if (previousFailure != null) throw previousFailure;
    try {
      return _instance = _loadNativeBindings();
    } catch (e) {
      final unavailable = AnalysisFfiUnavailable(
        'Native analysis symbols are unavailable or incompatible.',
        e,
      );
      _unavailable = unavailable;
      throw unavailable;
    }
  }

  static _AnalysisNativeBindings _loadNativeBindings() {
    try {
      return _AnalysisNativeBindings._(DynamicLibrary.executable());
    } catch (executableError) {
      if (!Platform.isMacOS) rethrow;
      final debugDylib = '${Platform.resolvedExecutable}.debug.dylib';
      if (!File(debugDylib).existsSync()) rethrow;
      try {
        return _AnalysisNativeBindings._(DynamicLibrary.open(debugDylib));
      } catch (debugDylibError) {
        throw AnalysisFfiUnavailable(
          'Failed to load macOS analysis symbols from the executable or debug dylib.',
          '$executableError; $debugDylibError',
        );
      }
    }
  }

  static bool get isAvailable {
    try {
      instance;
      return true;
    } catch (_) {
      return false;
    }
  }

  static AnalysisFfiUnavailable? get unavailableReason {
    try {
      instance;
      return null;
    } on AnalysisFfiUnavailable catch (e) {
      return e;
    }
  }

  late final _AbiIntDart abiVersion;
  late final _AbiIntDart sizeofSummary;
  late final _AbiIntDart sizeofFrameInfo;
  late final _AbiIntDart sizeofNaluInfo;
  late final _AbiIntDart sizeofFrameBucket;
  late final _AbiIntDart sizeofOverlayState;
  late final _LastErrorDart lastError;
  late final _AbiIntDart? sizeofQualitySummary;
  late final _AbiIntDart? sizeofQualitySample;

  late final _SetOverlayDart setOverlay;
  late final _SetOverlayTrackDart setOverlayTrack;
  late final _ClearOverlayTracksDart clearOverlayTracks;
  late final _GenerateVac2BaseDart generateVac2Base;
  late final _GenerateVac2OverlayChunkDart generateVac2OverlayChunk;
  late final _SubmitVac2OverlayChunkDart? submitVac2OverlayChunk;
  late final _PollGenerationJobsDart? pollGenerationJobs;
  late final _GetGenerationServiceStatsDart? getGenerationServiceStats;
  late final _OpenDart open;
  late final _CloseDart close;
  late final _HandleGetSummaryDart handleGetSummary;
  late final _HandleFrameIndexForTimestampDart handleFrameIndexForTimestamp;
  late final _HandleFrameIndexForSourcePacketDart
  handleFrameIndexForSourcePacket;
  late final _HandleGetFramesRangeDart handleGetFramesRange;
  late final _HandleGetNalusRangeDart handleGetNalusRange;
  late final _HandleIndexMapDart handleFrameToNalu;
  late final _HandleIndexMapDart handleNaluToFrame;
  late final _HandleGetFrameBucketsDart handleGetFrameBuckets;
  late final _QualityAnalyzeDart? qualityAnalyze;
  late final _QualityCloseDart? qualityClose;
  late final _QualityGetSummaryDart? qualityGetSummary;
  late final _QualityGetSamplesDart? qualityGetSamples;

  bool get hasGenerationService =>
      submitVac2OverlayChunk != null &&
      pollGenerationJobs != null &&
      getGenerationServiceStats != null;

  bool get hasQualityAnalysis =>
      sizeofQualitySummary != null &&
      sizeofQualitySample != null &&
      qualityAnalyze != null &&
      qualityClose != null &&
      qualityGetSummary != null &&
      qualityGetSamples != null;

  void _validateAbi() {
    final version = abiVersion();
    if (version != _expectedAnalysisAbiVersion) {
      throw StateError(
        'analysis ABI version $version does not match '
        '$_expectedAnalysisAbiVersion',
      );
    }
    _validateSize(
      'NakiAnalysisSummary',
      sizeofSummary(),
      sizeOf<NakiAnalysisSummary>(),
    );
    _validateSize('NakiFrameInfo', sizeofFrameInfo(), sizeOf<NakiFrameInfo>());
    _validateSize('NakiNaluInfo', sizeofNaluInfo(), sizeOf<NakiNaluInfo>());
    _validateSize(
      'NakiFrameBucket',
      sizeofFrameBucket(),
      sizeOf<NakiFrameBucket>(),
    );
    _validateSize(
      'NakiOverlayState',
      sizeofOverlayState(),
      sizeOf<NakiOverlayState>(),
    );
    if (hasQualityAnalysis) {
      _validateSize(
        'NakiQualitySummary',
        sizeofQualitySummary!(),
        sizeOf<NakiQualitySummary>(),
      );
      _validateSize(
        'NakiQualitySample',
        sizeofQualitySample!(),
        sizeOf<NakiQualitySample>(),
      );
    }
  }

  void _validateSize(String name, int nativeSize, int dartSize) {
    if (nativeSize != dartSize) {
      throw StateError(
        '$name size mismatch: native=$nativeSize dart=$dartSize',
      );
    }
  }
}

_AnalysisNativeBindings get _native => _AnalysisNativeBindings.instance;

// ===========================================================================
// Pure Dart data classes — copies of FFI struct fields, safe after free
// ===========================================================================

class FrameInfo {
  final int poc;
  final int temporalId;
  final int sliceType;
  final int nalType;
  final int avgQp;
  final int numRefL0;
  final int numRefL1;
  final List<int> refPocsL0;
  final List<int> refPocsL1;
  final int pts;
  final int dts;
  final int packetSize;
  final int keyframe;

  FrameInfo({
    required this.poc,
    required this.temporalId,
    required this.sliceType,
    required this.nalType,
    required this.avgQp,
    required this.numRefL0,
    required this.numRefL1,
    required this.refPocsL0,
    required this.refPocsL1,
    required this.pts,
    required this.dts,
    required this.packetSize,
    required this.keyframe,
  });
}

class NaluInfo {
  final int offset;
  final int size;
  final int nalType;
  final int temporalId;
  final int layerId;
  final int flags;

  NaluInfo({
    required this.offset,
    required this.size,
    required this.nalType,
    required this.temporalId,
    required this.layerId,
    required this.flags,
  });
}

class FrameBucket {
  final int startFrame;
  final int frameCount;
  final int packetSizeMin;
  final int packetSizeMax;
  final int packetSizeSum;
  final int qpMin;
  final int qpMax;
  final int qpSum;
  final int keyframeCount;

  FrameBucket({
    required this.startFrame,
    required this.frameCount,
    required this.packetSizeMin,
    required this.packetSizeMax,
    required this.packetSizeSum,
    required this.qpMin,
    required this.qpMax,
    required this.qpSum,
    required this.keyframeCount,
  });

  double get avgPacketSize => frameCount == 0 ? 0 : packetSizeSum / frameCount;
  double get avgQp => frameCount == 0 ? 0 : qpSum / frameCount;
}

class AnalysisSummary {
  final int loaded;
  final int frameCount;
  final int packetCount;
  final int naluCount;
  final int videoWidth;
  final int videoHeight;
  final int timeBaseNum;
  final int timeBaseDen;
  final int currentFrameIdx;
  final int codec;

  const AnalysisSummary({
    required this.loaded,
    required this.frameCount,
    required this.packetCount,
    required this.naluCount,
    required this.videoWidth,
    required this.videoHeight,
    required this.timeBaseNum,
    required this.timeBaseDen,
    required this.currentFrameIdx,
    required this.codec,
  });
